[tool.poetry]
name = "PythonPlug"
version = "0.1.0"
description = "An ASGI web framework"
packages = [{ include = "PythonPlug" }]
authors = ["Shen Li <dustet@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6,<4"
multidict = "^4.5"
Werkzeug = "^0.15.4"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-asyncio = "*"
codecov = "^2.0"

starlette = "*"
daphne = "*"

black = {version = "*", allows-prereleases = true}
isort = "*"
pylint = "*"
mypy = "*"

ipdb = "*"
ipython = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
